# psyness

./: .gitignore  README.md  docker-compose.yaml
dev/db/: init.sql
projetcs/api-gateway/: pyproject.toml
projetcs/api-gateway/api_gateway/: dependencies.py  main.py
projetcs/api-gateway/api_gateway/auth/: auth.py
projetcs/api-gateway/api_gateway/clients/: appointment_client.py  google_client.py  user_client.py  users.py
projetcs/api-gateway/api_gateway/config/: settings.py
projetcs/api-gateway/api_gateway/configs/: settings.py
projetcs/api-gateway/api_gateway/dto/: appointment_dto.py  invitation_dto.py  schedule_dto.py  user_dto.py
projetcs/api-gateway/api_gateway/routes/: appointment_routes.py  client_routes.py  google_login.py  google_login_routes.py  invitation_routes.py  login.py  one_time_link_routes.py  psychologist_routes.py  schedule_routes.py  session.py  session_routes.py
projetcs/api-gateway/api_gateway/services/: user_service.py
projetcs/event-service/: pyproject.toml
projetcs/event-service/event_service/: dependencies.py  main.py
projetcs/event-service/event_service/configs/: settings.py
projetcs/event-service/migrations/: 20220509_01_Mlpbr-create-events-table.py  20220626_01_ItKWE-create-one-time-event-token.py  20220705_01_sjeUc-create-schedules-table.py
projetcs/user-service/: pyproject.toml
projetcs/user-service/migrations/: 20220423_01_gLvfY-create-users-table.py  20220506_01_B53HI-add-invitatios-table.py  20220507_01_5YT0e-add-contract-table.py
projetcs/user-service/user_service/: dependencies.py  main.py
(+105 files in other folders)
