[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["Andrey Kozel <andrey.kozel@spanning.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Authlib = "^1.0.1"
httpx = "^0.22.0"
itsdangerous = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
