[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["Andrey Kozel <andrey.kozel@spanning.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yoyo-migrations = "^7.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
