[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Andrey Kozel <andrey.kozel@spanning.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
yoyo-migrations = "^7.3.2"
psycopg2-binary = "^2.9.3"
dependency-injector = "^4.39.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
